# muse

./: Cargo.toml  README.md
bench-utils/src/: lib.rs
experiments/: Cargo.toml
experiments/src/: lib.rs  resnet32.rs
experiments/src/inference/: image.npy  inference.rs
experiments/src/inference/minionn/: inference.rs
experiments/src/latency/: client.rs  server.rs
experiments/src/latency/end_test/: client.rs  server.rs
experiments/src/latency/full/: client.rs  server.rs
experiments/src/latency/input_auth/: client.rs  server.rs
experiments/src/latency/minionn/: client.rs  server.rs
experiments/src/latency/mnist/: client.rs  server.rs
experiments/src/latency/triples_gen/: client.rs  server.rs
experiments/src/throughput/: client.rs  server.rs
experiments/src/throughput/linear_only/: client.rs
experiments/src/throughput/linear_only/resnet32/: client.rs  server.rs
experiments/src/validation/: classes.npy  generate_test_images.py  image_0.npy  image_1.npy  image_2.npy  image_3.npy  image_4.npy  image_5.npy  image_6.npy  image_7.npy  image_8.npy  image_9.npy  plaintext.npy  validate.rs
experiments/src/validation/minionn/: validate.rs
protocols/: Cargo.toml
protocols-sys/: build.rs
protocols-sys/c++/: CMakeLists.txt  Makefile  cmake_install.cmake
protocols-sys/c++/MP-SPDZ/: benchmark_muse.mpc
protocols-sys/c++/SEAL/dotnet/nuget/: SEALNet.nuspec
protocols-sys/c++/SEAL/native/examples/: 6_performance.cpp
protocols-sys/c++/SEAL/native/src/cmake/: SEALConfig.cmake  SEALConfigVersion.cmake  SEALTargets.cmake
protocols-sys/c++/SEAL/native/src/seal/util/: config.h
protocols-sys/c++/src/lib/: interface.cpp
protocols-sys/src/: bindings.rs
protocols-sys/tests/: interface_test.rs
protocols/src/: bytes.rs  cds.rs  gc.rs  lib.rs  linear_layer.rs  mpc.rs  mpc_offline.rs  neural_network.rs  tests.rs
rust/experiments/: Cargo.toml
